# c99-to-c89

./: .gitattributes  .gitignore  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac  configure.scan  convert.c
m4/: EbgMacOSXOptions.m4  ax_llvm.m4  ccstdc.m4
